--- a/tela inicial/index.html
+++ b/tela inicial/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="content">
     <header>
-    <img src="/atividade2/atv2-pomo-main/atv2-pomo-main/images/logo-pomo.png" alt="logo" >
+    <img src="/img/logo-pomo.png" alt="logo" >
 </header>
 
 <footer>
-    <img src="/atividade2/atv2-pomo-main/atv2-pomo-main/images/loading.gif" alt="gif">
+    <img src="/img/loading.gif" alt="gif">
 </footer>
 </div>
     <script src="main.js"></script>
