docs:adicionando imagens de logo

--- a/pages/content1-page/content1.html
+++ b/pages/content1-page/content1.html
@@ -7,11 +7,18 @@
     <title>content1</title>
 </head>
 <body>
-    <img src="/img/figura-centro-tela1.png" alt="duas moças segurando telas e olhando para uma">
+    
+    <img id="img1-content1" src="/img/figura-centro-tela1.png" alt="duas pessoas segurando telas e olhando para uma tela">
+
+
    <p>Easy task & work management with pomo</p> 
+
+ 
    <button id="button1-content1"></button>
    <button  id="button2-content1"></button>
    <button  id="button3-content1"></button>
+
+
    <button  id="buttonMain-content1">Next</button>
 </body>
 </html>
