--- a/pages/content1-page/content1.html
+++ b/pages/content1-page/content1.html
@@ -3,22 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="content1.css">
     <title>content1</title>
 </head>
 <body>
     
-    <img id="img1-content1" src="/img/figura-centro-tela1.png" alt="duas pessoas segurando telas e olhando para uma tela">
+    <img id="img1-content1" src="/img/imagem-content1.png" alt="duas pessoas segurando telas e olhando para uma tela">
 
 
    <p>Easy task & work management with pomo</p> 
 
- 
+ <div class="bt-container">
    <button id="button1-content1"></button>
    <button  id="button2-content1"></button>
    <button  id="button3-content1"></button>
-
-
+</div>
+    <br>
+    <div class="bt-container2">
    <button  id="buttonMain-content1">Next</button>
+</div>
 </body>
 </html>
