feat:adicionado sombreamento do botão e cor da seta

--- a/pages/content3-page/content3.html
+++ b/pages/content3-page/content3.html
@@ -25,7 +25,7 @@
 </div>
     <br>
     <div class="bt-container2-content3">
-   <button  id="buttonMain-content3">Next</button>
+   <button  id="buttonMain-content3">Get Started</button>
 </div>
 </body>
 </html>
