fix:corrigindo tamanho da fonte

--- a/pages/logIn-page/log.html
+++ b/pages/logIn-page/log.html
@@ -19,9 +19,9 @@
 
 
         <div class="redes">
-        <button  id="button1-LogIn"><img src="/img/facebook.png"><a> Continue with Facebook</a></button>
-        <button  id="button2-LogIn"><img src="/img/google-logo.png"><a> Continue with Google</a></button>
-        <button  id="button3-LogIn"><img src="/img/apple-logo.png"><a> Continue with Apple</a></button>
+        <button  id="button1-LogIn"><img src="/img/facebook.png"><a href="https://www.facebook.com/?locale=pt_BR"> Continue with Facebook</a></button>
+        <button  id="button2-LogIn"><img src="/img/google-logo.png"><a href="https://www.google.com/intl/pt-BR/account/about/"> Continue with Google</a></button>
+        <button  id="button3-LogIn"><img src="/img/apple-logo.png"><a href="https://appleid.apple.com/"> Continue with Apple</a></button>
     </div>
             <br>
         <p>or</p> 
