--- a/pages/form-page/form.html
+++ b/pages/form-page/form.html
@@ -12,28 +12,30 @@
 <body>
 <img src="/img/logo-pomo.png">
 
-<form class="form-content">
+<div class="form-content">
+<form class="form-content1">
     <h1>Create Your Account</h1>
 
-    <label for="nome">Name</label><br>
+    <label for="nome"> Name</label><br>
     <input type="text" id="nome" name="nome">
     <br>
-    <label for="email">E-mail</label>
+    <label for="email"> E-mail</label>
     <br>
     <input type="email" id="email" name="email">
     <br>
-    <label for="pass">Password:</label>
+    <label for="pass"> Password:</label>
     <br>
     <input type="password" id="pass" name="password" minlength="8" required />
     <br>
-    <label for="pass">Confirm Password:</label>
+    <label for="pass"> Confirm Password:</label>
     <br>
-    <input type="password" id="pass" name="password" minlength="8" required />
+    <input type="password" id="pass1" name="password" minlength="8" required />
     
-    <div clas="button-forms">
+    <div class="button-forms">
         <button id="button1-forms">Go Back</button>
         <button id="button2-forms">Create Account</button>
     </div>
+</div>
 
 </form>
 
