feat:adicionando tag script nas paginas

--- a/pages/content1-page/content1.html
+++ b/pages/content1-page/content1.html
@@ -25,5 +25,6 @@
     <div class="bt-container2">
    <button  id="buttonMain-content1">Next</button>
 </div>
+<script src="main.js"></script>
 </body>
 </html>
