--- a/pages/content3-page/content3.html
+++ b/pages/content3-page/content3.html
@@ -27,5 +27,6 @@
     <div class="bt-container2-content3">
    <button  id="buttonMain-content3">Get Started</button>
 </div>
+<script src="main.js"></script>
 </body>
 </html>
