--- a/pages/logIn-page/log.html
+++ b/pages/logIn-page/log.html
@@ -32,6 +32,6 @@
 </div>
     <br>
     <p> Don't have an account?<a  id="color-a">Sign Up</a></p> 
-
+    <script src="main.js"></script>
 </body>
 </html>
