--- a/pages/content2-page/content2.html
+++ b/pages/content2-page/content2.html
@@ -27,5 +27,6 @@
     <div class="bt-container2-content2">
    <button  id="buttonMain-content2">Next</button>
 </div>
+<script src="main.js"></script>
 </body>
 </html>
