--- a/pages/content1-page/content1.html
+++ b/pages/content1-page/content1.html
@@ -23,8 +23,8 @@
 </div>
     <br>
     <div class="bt-container2">
-   <button  id="buttonMain-content1">Next</button>
+   <button onclick="changePage()" id="buttonMain-content1">Next</button>
 </div>
-<script src="main.js"></script>
+<script src="content1.js"></script>
 </body>
 </html>
