--- a/pages/content2-page/content2.html
+++ b/pages/content2-page/content2.html
@@ -25,8 +25,8 @@
 </div>
     <br>
     <div class="bt-container2-content2">
-   <button  id="buttonMain-content2">Next</button>
+   <button onclick="changePage()" id="buttonMain-content2">Next</button>
 </div>
-<script src="main.js"></script>
+<script src="content2.js"></script>
 </body>
 </html>
