--- a/pages/content3-page/content3.html
+++ b/pages/content3-page/content3.html
@@ -25,8 +25,8 @@
 </div>
     <br>
     <div class="bt-container2-content3">
-   <button  id="buttonMain-content3">Get Started</button>
+   <button onclick="changePage()" id="buttonMain-content3">Get Started</button>
 </div>
-<script src="main.js"></script>
+<script src="content3.js"></script>
 </body>
 </html>
