feat:adicionando js logIn

--- a/pages/logIn-page/log.html
+++ b/pages/logIn-page/log.html
@@ -31,7 +31,7 @@
    <button  id="buttonMain-LogIn">Log in with E-mail</button>
 </div>
     <br>
-    <p> Don't have an account?<a  id="color-a">Sign Up</a></p> 
-    <script src="main.js"></script>
+    <p> Don't have an account?<a onclick="ChangePage()" id="color-a">Sign Up</a></p> 
+    <script src="log.js"></script>
 </body>
 </html>
