--- a/pages/content3-page/content3.html
+++ b/pages/content3-page/content3.html
@@ -11,7 +11,7 @@
 </head>
 <body>
       <div class="seta-imagem">
-        <img id="seta-content3" src="/img/seta.png">
+        <img onclick="PassPage()" id="seta-content3" src="/img/seta.png">
     </div>
     
     <img id="img1-content3" src="/img/imagem-content3.png" alt="duas pessoas segurando telas e olhando para uma tela">
