feat:adicionando redirecionamento e botão go back

--- a/pages/content2-page/content2.html
+++ b/pages/content2-page/content2.html
@@ -11,7 +11,7 @@
 </head>
 <body>
       <div class="seta-imagem">
-        <img id="seta-content2" src="/img/seta.png">
+        <img onclick="PassPage()" id="seta-content2" src="/img/seta.png">
     </div>
     
     <img id="img1-content2" src="/img/imagem-content2.png" alt="duas pessoas segurando telas e olhando para uma tela">
