--- a/pages/logIn-page/log.html
+++ b/pages/logIn-page/log.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="seta-imagem-LogIn">
-        <img id="seta-LogIn" src="/img/seta.png">
+        <img onclick="PassPage()" id="seta-LogIn" src="/img/seta.png">
     </div>
 
      <h1>Let's log you in</h1>
