--- a/pages/form-page/form.html
+++ b/pages/form-page/form.html
@@ -32,12 +32,12 @@
     <input type="password" id="pass1" name="password" minlength="8" required />
     
     <div class="button-forms">
-        <button id="button1-forms">Go Back</button>
+        <button onclick="PassPage()"id="button1-forms">Go Back</button>
         <button id="button2-forms">Create Account</button>
     </div>
 </div>
 
 </form>
-<script src="main.js"></script>
+<script src="form.js"></script>
 </body>
 </html>
