--- a/pages/form-page/form.html
+++ b/pages/form-page/form.html
@@ -16,25 +16,29 @@
 <form class="form-content1">
     <h1>Create Your Account</h1>
 
-    <label for="nome"> Name</label><br>
-    <input type="text" id="nome" name="nome">
+    <label id="labelName" for="nome"> Name</label><br>
+    <input type="text" id="nome" name="nome" placeholder="" required>
+
     <br>
-    <label for="email"> E-mail</label>
+    <label id= "labelEmail" for="email"> E-mail</label>
     <br>
-    <input type="email" id="email" name="email">
+    <input type="email" id="email" name="email" placeholder="" required>
     <br>
-    <label for="pass"> Password:</label>
+
+    <label id="labelSenha" for="pass"> Password:</label>
     <br>
-    <input type="password" id="pass" name="password" minlength="8" required />
+    <input type="password" id="senha" name="password" minlength="8"placeholder="" required />
     <br>
-    <label for="pass"> Confirm Password:</label>
+   
+
+    <label id="labeSenha1" for="Confirmpass"> Confirm Password:</label>
     <br>
-    <input type="password" id="pass1" name="password" minlength="8" required />
+    <input type="password" id="senha1" name="password" minlength="8" placeholder="" required />
     </form>
 
     <div class="button-forms">
         <button onclick="PassPage()"id="button1-forms">Go Back</button>
-        <button id="button2-forms">Create Account</button>
+        <button id="button2-forms" onclick="cadastrar()">Create Account</button>
     </div>
 </div>
 
