feat: adicionando localStorage

--- a/pages/home-page/home.html
+++ b/pages/home-page/home.html
@@ -13,6 +13,7 @@
 <img src="/img/logo-pomo.png">
 <div class="home-content">
    <h2>Bem vindo!</h2>
+   <div id="dadosSucesso"></div>
     </div>
     <script src="main.js"></script>
 </body>
