feat:adicionando js no home

--- a/pages/form-page/form.html
+++ b/pages/form-page/form.html
@@ -17,23 +17,23 @@
     <h1>Create Your Account</h1>
 
     <label id="labelName" for="nome"> Name</label><br>
-    <input type="text" id="nome" name="nome" placeholder="" required>
+    <input type="text" id="nome" name="nome" placeholder="Name" required>
 
     <br>
     <label id= "labelEmail" for="email"> E-mail</label>
     <br>
-    <input type="email" id="email" name="email" placeholder="" required>
+    <input type="email" id="email" name="email" placeholder=" E-mail" required>
     <br>
 
     <label id="labelSenha" for="pass"> Password:</label>
     <br>
-    <input type="password" id="senha" name="password" minlength="8"placeholder="" required />
+    <input type="password" id="senha" name="password" minlength="8"placeholder=" Password" required />
     <br>
    
 
     <label id="labeSenha1" for="Confirmpass"> Confirm Password:</label>
     <br>
-    <input type="password" id="senha1" name="password" minlength="8" placeholder="" required />
+    <input type="password" id="senha1" name="password" minlength="8" placeholder="Confirm Password" required />
     </form>
 
     <div class="button-forms">
