--- a/pages/home-page/home.html
+++ b/pages/home-page/home.html
@@ -11,10 +11,10 @@
 </head>
 <body>
 <img src="/img/logo-pomo.png">
-<div class="home-content">
+<div onclick='mostrarCadastro()'class="home-content">
    <h2>Bem vindo!</h2>
    <div id="dadosSucesso"></div>
     </div>
-    <script src="main.js"></script>
+    <script src="home.js"></script>
 </body>
 </html>
