--- a/pages/home-page/home.html
+++ b/pages/home-page/home.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <img src="/img/logo-pomo.png">
-<div onclick='mostrarCadastro()'class="home-content">
+<div onload='mostrarCadastro()' class="home-content">
    <h2>Bem vindo!</h2>
    <div id="dadosSucesso"></div>
     </div>
