error:reconhecimento dos dados

--- a/pages/home-page/home.html
+++ b/pages/home-page/home.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 <img src="/img/logo-pomo.png">
-<div onload='mostrarCadastro()' class="home-content">
-   <h2>Bem vindo!</h2>
+<div  onload='mostrarCadastro()' class="home-content">
+   <h2>Usuário Registrado Com Sucesso!</h2>
    <div id="dadosSucesso"></div>
     </div>
     <script src="home.js"></script>
