fix:solucionado reconhecimento dos dados home-page concluida

--- a/pages/home-page/home.html
+++ b/pages/home-page/home.html
@@ -15,6 +15,6 @@
    <h2>Usuário Registrado Com Sucesso!</h2>
    <div id="dadosSucesso"></div>
     </div>
-    <script src="home.js"></script>
+    <script src="home1.js"></script>
 </body>
 </html>
