feat:editando telas

--- a/pages/content3-page/content3.html
+++ b/pages/content3-page/content3.html
@@ -7,14 +7,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="content3.css">
-    <title>content3</title>
+    <title>Content3</title>
 </head>
 <body>
       <div class="seta-imagem">
         <img onclick="PassPage()" id="seta-content3" src="/img/seta.png">
     </div>
     
-    <img id="img1-content3" src="/img/imagem-content3.png" alt="duas pessoas segurando telas e olhando para uma tela">
+    <img id="img1-content3" src="/img/imagem-content3.png" alt="uma pessoa com um computador">
 
 
    <p>Boost your productivity now & be successful</p> 
