--- a/pages/form-page/form.html
+++ b/pages/form-page/form.html
@@ -10,7 +10,7 @@
     <title>Form-page</title>
 </head>
 <body>
-<img src="/img/logo-pomo.png">
+<img src="/img/logo-pomo.png" alt="logo da empresa, P grande">
 
 <div class="form-content">
 <form class="form-content1">
