--- a/pages/home-page/home.html
+++ b/pages/home-page/home.html
@@ -10,11 +10,14 @@
     <title>Home-page</title>
 </head>
 <body>
+
 <img src="/img/logo-pomo.png">
 <div  onload='mostrarCadastro()' class="home-content">
-   <h2>Usuário Registrado Com Sucesso!</h2>
+   <h2>Bem vindo!</h2>
    <div id="dadosSucesso"></div>
+   <button>Start</button>
     </div>
+
     <script src="home1.js"></script>
 </body>
 </html>
